fix: multiple minor fixes